apps/colima/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
  labels:
    app.kubernetes.io/name: whoami
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
